# react-squirrel-backend

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE.md  QUICKSTART.md  README.md  config.yaml  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_tests.py  setup.sh  sitemap.xml  windows-dev-requirements.txt
.github/workflows/: build-and-deploy-dev.yml  build-release.yml  deploy-dev-prod.yml  deploy-prod.yml  deploy.yml  gh-pages.yml  run-test.yml  tests.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_job_table.py  003_add_performance_indexes.py  004_add_api_key_table.py  004_add_snapshot_partitioning.py  004_add_snapshot_partitioning.py.disabled  2024_12_11_0000-559e07df8e00_add_job_table.py  2024_12_11_0000-8f6d5390d49b_initial_schema.py  2024_12_12_0000-d365210f8676_add_performance_indexes.py  2026_02_19_0000-c4797e015c4b_add_api_key_table.py  2026_02_19_1505-7cb2f0b7580f_api_key_partial_unique_app_name.py  2026_02_20_1030-61476c608fc3_snapshot_comment_to_description.py  2026_03_10_0000-6c1c0c2f8a1b_adjust_pv_uniqueness.py  2026_04_29_0000-95c2670ff066_add_elog_last_entry.py  61476c608fc3_snapshot_comment_to_description.py  7cb2f0b7580f_api_key_partial_unique_app_name.py
api-reference/: index.html
api-reference/endpoints/: index.html
api-reference/websocket/: index.html
app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  mcp_server.py  monitor_main.py  worker.py
app/api/: responses.py
app/db/: session.py
app/models/: __init__.py  api_key.py  base.py  elog_last_entry.py  job.py  pv.py  snapshot.py  tag.py
app/repositories/: api_key_repository.py  base.py  job_repository.py  pv_repository.py  snapshot_repository.py  tag_repository.py
app/schemas/: __init__.py  analytics.py  api_key.py  common.py  health.py  job.py  pv.py  snapshot.py  tag.py
app/services/: analytics_service.py  api_key_service.py  background_tasks.py  bulk_insert_service.py  circuit_breaker.py  epics_service.py  epics_types.py  epics_worker.py  job_service.py  protocol_parser.py  pv_monitor.py  pv_protocol.py  pv_service.py  pvaccess_monitor.py  pvaccess_service.py  redis_service.py  snapshot_service.py  subscription_registry.py  tag_service.py  watchdog.py
app/shared/: __init__.py  redis_channels.py
app/tasks/: __init__.py  snapshot_tasks.py
architecture/: index.html
architecture/data-flow/: index.html
architecture/distributed-system/: index.html
development/: index.html
development/code-quality/: index.html
development/migrations/: index.html
development/testing/: index.html
docker/: .env.example  Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docker/observability/: README.md  docker-compose.observability.yml  loki-config.yaml  promtail-config.yaml
docs/: index.md
docs/api-reference/: endpoints.md  (+2 more)
getting-started/: index.html
reference/: index.html
scripts/: create_key.py  deactivate_key.py  list_keys.py
search/: search_index.json
src/: hello_world.py
tests/: conftest.py  test_dependencies.py
(+56 files in other folders)
